# APTv16

./: .gitignore  REACT_FIX_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  package-lock.json  vite.config.ts
backend/: .env.example  BACKEND_SETUP.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/core/: __init__.py  auth.py  database.py  security.py
backend/app/models/: __init__.py  activity.py  base.py  enums.py  lease.py  maintenance.py  metrics.py  organization.py  payment.py  property.py  tenant.py  unit.py  user.py  vendor.py
backend/app/schemas/: __init__.py  models.py  organization.py  token.py  user.py
backend/apt_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 065fc5df53e7_initial_schema_with_all_models.py
backend/tests/: test_health.py
database/: schema.sql
frontend/: index.html  package-lock.json
frontend/src/app/: App.tsx
src/styles/: fonts.css
